* Update megahit from 1.0.3 to 1.1.3.
* Update R from 3.3.2 to 3.5.1
* Update rgi from 3.1.1 to 4.2.2
* Update gottcha dmd complier and use conda to install rapsearch2
* Add MaxBin tools for metagenome contig binning
* Add debug flag in auto_run script
* Add vcf filter options: -I and -r for alternative bases ration and INDEL depth support value

EDGE GUI 2.4.0
* Add Ploidy option for Variant calling
* Add anchor link in the result page to quick accession module result
* Add one more line for LibreOffice xlsx format check
* Adjust mobile portrait width for front page
* Fix bug: the reset function disabled show on the registration iframe page.
* Add Binning tag in Assembly and Annotation Module
* Update Taxonomy tool result display by user select options

Database:
GOTTCHA2: update to refseq90
PANGIA: update to refseq89
CARD: update to 3.0.0 

-- Version 20180829
EDGE version 2.3.1
* fix bug: blank SRA accesion variable 
* Add comma separated single reads support for batch submit
* Add script to update existing projects status, runtime, submission time
* Add contig taxonomy classification info (species) into JBrowse annotation gff track 
* Assign HOME to EDGE_HOME when not using regular user runing PanGIA
* Update samtools from 1.6 to 1.9
* Auto Adjust bwa alignment score by reads length for PanGIA pipeline.

EDGE GUI 2.3.1
* fix bug: corrupted gz file using Upload function

-- Version 20180724
EDGE version 2.3.0
* Update Kraken version from 0.10.4 beta to 1.0
* Update Metaphlan from 1.7.7 to 2.7.7
* Add global numCPU option for runReadsToGenome and runReadsToContig scripts
* Add Qiime taxonomy plot bar chart and alpha diversity analysis for only one sample
* fix bug: fasta header correction for consensus pipeline
* fix bug: project rerun in docker container. remove some system call
* update PyPiRt version from 0.3 to 0.3.2. ID to SampleID.

EDGE GUI version 2.3.0
* Add Take Notes Button in result page