@@ -1420,6 +1420,7 @@ A complete version of EDGE is available as a variety of packages that can fit in
 						<optgroup label="Other Tools">
 							<option value="metaphlan2" selected="">MetaPhlAn2</option>
 							<option value="kraken" selected="">Kraken</option>
+							<!--<option value="centrifuge" selected="">Centrifuge</option>-->
 							<!-- Adding DIAMOND -->
 							<option value="diamond">DIAMOND (Amino acid-based classification)</option>
 						</optgroup>
