@@ -13,6 +13,7 @@ EDGE 2.4.0
 * Add MaxBin tools for metagenome contig binning
 * Add debug flag in auto_run script
 * Add vcf filter options: -I and -r for alternative bases ration and INDEL depth support value
+* Add Centrifuge taxonomy classification tool
 
 EDGE GUI 2.4.0
 * Add Ploidy option for Variant calling
